fix6 ci